# jroutes

./: .gitignore  CHANGELOG.md  Makefile  manifest.json  pyproject.toml  requirements.txt
scripts/: init.sh
src/jroutes/: .cowpyrc  routing.py  serve.py  serving.py  test.py
tests/: .cowpyrc  routes.py
