[project]
name = "jroutes"
version = "0.0.1"
authors = [
  { name="Tim Palko", email="tim@palkosoftware.com" },
]
description = "As lightweight as possible API framework for serving come-as-you-are endpoints"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tpalko/jroutes"
"TestPyPI" = "https://test.pypi.org/project/jroutes"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
